Add item catalog content support
